<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">

    <TextView
        android:id="@+id/hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:gravity="start"
        android:text="@string/Hello"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/WelcomeBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="start"
        android:text="@string/welcome_back"
        android:layout_below="@id/hello"
        android:textColor="@color/black"
        android:textSize="22sp" />


    <TextView
        android:id="@+id/EmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/WelcomeBack"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:text="@string/Email"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/FullName"
        android:inputType="textEmailAddress"
        android:autofillHints="name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/EmailAddress"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="2dp"
        android:hint="@string/Enter_Email"
        android:background="@drawable/edit_text_border"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/ash"
        android:drawablePadding="20dp"/>

    <TextView
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/FullName"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:text="@string/Enter_Password"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/enterPassword"
        android:inputType="textVisiblePassword"
        android:autofillHints="password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Password"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="2dp"
        android:hint="@string/Enter_Password"
        android:background="@drawable/edit_text_border"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/ash"
        android:drawablePadding="20dp"/>

    <TextView
        android:id="@+id/ForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_below="@id/enterPassword"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="#FFC107"
        android:textSize="15sp"
        android:gravity="start"/>

    <Button
        android:id="@+id/signIn_Btn"
        android:layout_width="320dp"
        android:layout_height="64dp"
        android:layout_marginTop="6dp"
        android:layout_marginStart="60dp"
        android:foregroundGravity="center"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/Click_to_sign_in"
        android:text="@string/sign_in"
        android:background="@drawable/sign_in_button_border"
        android:textColor="@color/white"
        android:layout_below="@id/ForgotPassword"/>

    <TextView
        android:id="@+id/OrSignInWith"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signIn_Btn"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:text="@string/Or_sign_in_with"
        android:textColor="@color/ash"
        android:textStyle="bold"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/OrSignInWith"
        android:layout_marginBottom="5dp"
        android:id="@+id/logoLayout">

        <ImageView
            android:id="@+id/googleBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="22dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/logo_border"
            android:contentDescription="@string/Sign_in_with_google"
            android:elevation="10dp"
            android:padding="15dp"
            android:src="@drawable/google" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/facebookBtn"
            android:layout_margin="22dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:src="@drawable/facebook"
            android:padding="15dp"
            android:elevation="10dp"
            android:contentDescription="@string/Sign_in_with_facebook"
            android:background="@drawable/logo_border"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoLayout"
        android:orientation="horizontal">
        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/newMember"
            android:text="@string/new_member"
            android:layout_marginStart="70dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:linksClickable="true"
            android:text="@string/sign_up"
            android:textColor="#FFC107" />
    </LinearLayout>

</RelativeLayout>
