<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/greeting_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:layout_constraintTop_toTopOf="parent">

<TextView
    android:id="@+id/greeting_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="30dp"
    android:layout_marginTop="20dp"
    android:fontFamily="@font/poppins_semibold"
    android:text="@string/greeting"
    android:textColor="@color/dark_dark_grey"
    android:textSize="24sp"
    app:layout_constraintHeight_max="30dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/greeting2_text"
    android:contentDescription="@string/lie"
    android:layout_width="wrap_content"
    android:layout_height="17dp"
    android:layout_marginStart="30dp"
    android:layout_marginTop="8dp"
    android:text="@string/greeting2"
    android:textColor="@color/dark_grey"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/greeting_text" />

<de.hdodenhof.circleimageview.CircleImageView
    android:id="@+id/profile_image"
    android:layout_width="60dp"
    android:layout_height="60dp"
    android:layout_marginTop="45dp"
    android:layout_marginEnd="35dp"
    android:scaleType="centerCrop"
    android:src="@drawable/profile_photo"
    app:civ_border_color="@color/white"
    app:civ_border_width="2dp"
    app:layout_constraintBottom_toBottomOf="@id/greeting_text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.5" />

<SearchView
    android:id="@+id/search_view"
    android:layout_width="255sp"
    android:layout_height="wrap_content"
    android:layout_marginStart="30dp"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/searchbar_background"
    android:searchIcon="@drawable/ic_search"
    android:textColorHint="@color/grey"
    app:iconifiedByDefault="false"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@id/filter_button"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/greeting2_text"
    app:layout_constraintVertical_bias="1.0" />

<ImageView
    android:id="@+id/filter_button"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="45dp"
    android:background="@drawable/filter_background"
    android:padding="10dp"
    android:src="@drawable/ic_filter"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/profile_image"
    android:importantForAccessibility="no" />

</androidx.constraintlayout.widget.ConstraintLayout>